Fix multiple startup issues